--- a/401.html
+++ b/401.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Oct 31 2024 15:10:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66eec62f2fa59c2dc1325448" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -36,9 +36,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="utility-page-content w-password-page w-form">
       <form action="/.wf_auth" method="post" id="email-form" name="email-form" data-name="Email Form" class="utility-page-form w-password-page" data-wf-page-id="66eec62f2fa59c2dc1325448" data-wf-element-id="60d096907f5965371b4f6f3800000000000c"><img src="https://d3e54v103j8qbb.cloudfront.net/static/utility-lock.ae54711958.svg" alt="" class="icon-large">
         <div class="margin-vertical margin-small">
-          <h2 class="heading-style-h3">Protected Page</h2>
-        </div><label for="pass" class="form_label">Password</label><input class="form_input w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" type="password" id="pass">
-        <div class="padding-bottom padding-xsmall"></div><input type="submit" data-wait="Please wait..." class="button max-width-full w-password-page w-button" value="Submit">
+          <h2 class="heading-style-h3">Įveskite slaptažodį</h2>
+        </div><input class="form_input w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Jūsų slaptažodis" type="password" id="pass">
+        <div class="padding-bottom padding-xsmall"></div><input type="submit" data-wait="Please wait..." class="button max-width-full w-password-page w-button" value="Tęsti">
         <div class="form_message-error w-password-page w-form-fail">
           <div class="form_state-content">
             <div class="form_error-icon-wrapper">
