--- a/sokiu-pamoku-kainos.html
+++ b/sokiu-pamoku-kainos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Oct 27 2024 09:16:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Oct 31 2024 15:07:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="671a37b3a85fd1ae1e07c883" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -208,7 +208,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 20vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.8515625px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -461,12 +461,55 @@ margin: 0rem !important;
       <div class="padding-global">
         <div class="container-large">
           <div class="padding-section-large">
+            <div class="footer5_top">
+              <div class="footer5_content-left">
+                <div class="text-size-large text-weight-semibold">Custom Webflow Cloneable</div>
+                <div class="padding-bottom padding-small"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. </p>
+                <div class="padding-bottom padding-medium"></div>
+                <a href="https://www.finsweet.com/client-first/" class="button w-button">Open docs</a>
+              </div>
+              <div class="footer5_content-right">
+                <div class="text-size-large text-weight-semibold">Keep in touch</div>
+                <div class="footer5_social">
+                  <div class="footer5_social-row">
+                    <a aria-label="Instagram" href="https://www.instagram.com/thatsfinsweet/?hl=en" class="social_link w-inline-block">
+                      <div class="social_icon w-embed"><svg aria-hidden="true" fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"></path>
+                        </svg></div>
+                    </a>
+                    <a href="https://www.instagram.com/thatsfinsweet/?hl=en" class="footer5_link">Follow us on Instagram</a>
+                  </div>
+                  <div class="footer5_social-row">
+                    <a aria-label="Dribbble" href="https://dribbble.com/thatsfinsweet" class="social_link w-inline-block">
+                      <div class="social_icon w-embed"><svg aria-hidden="true" fill="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M12 24C5.385 24 0 18.615 0 12S5.385 0 12 0s12 5.385 12 12-5.385 12-12 12zm10.12-10.358c-.35-.11-3.17-.953-6.384-.438 1.34 3.684 1.887 6.684 1.992 7.308 2.3-1.555 3.936-4.02 4.395-6.87zm-6.115 7.808c-.153-.9-.75-4.032-2.19-7.77l-.066.02c-5.79 2.015-7.86 6.025-8.04 6.4 1.73 1.358 3.92 2.166 6.29 2.166 1.42 0 2.77-.29 4-.814zm-11.62-2.58c.232-.4 3.045-5.055 8.332-6.765.135-.045.27-.084.405-.12-.26-.585-.54-1.167-.832-1.74C7.17 11.775 2.206 11.71 1.756 11.7l-.004.312c0 2.633.998 5.037 2.634 6.855zm-2.42-8.955c.46.008 4.683.026 9.477-1.248-1.698-3.018-3.53-5.558-3.8-5.928-2.868 1.35-5.01 3.99-5.676 7.17zM9.6 2.052c.282.38 2.145 2.914 3.822 6 3.645-1.365 5.19-3.44 5.373-3.702-1.81-1.61-4.19-2.586-6.795-2.586-.825 0-1.63.1-2.4.285zm10.335 3.483c-.218.29-1.935 2.493-5.724 4.04.24.49.47.985.68 1.486.08.18.15.36.22.53 3.41-.43 6.8.26 7.14.33-.02-2.42-.88-4.64-2.31-6.38z"></path>
+                        </svg></div>
+                    </a>
+                    <a href="https://dribbble.com/thatsfinsweet" class="footer5_link">Share your feedback on Dribbble</a>
+                  </div>
+                  <div class="footer5_social-row">
+                    <a aria-label="Facebook" href="https://www.facebook.com/thatsfinsweet" class="social_link w-inline-block">
+                      <div class="social_icon w-embed"><svg aria-hidden="true" height="100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0C3.58172 0 0 3.58172 0 8C0 11.993 2.92546 15.3028 6.75 15.9029V10.3125H4.71875V8H6.75V6.2375C6.75 4.23281 7.94375 3.125 9.77188 3.125C10.6469 3.125 11.5625 3.28125 11.5625 3.28125V5.25H10.5531C9.55938 5.25 9.25 5.86719 9.25 6.5V8H11.4688L11.1141 10.3125H9.25V15.9029C13.0745 15.3028 16 11.993 16 8C16 3.58172 12.4183 0 8 0Z" fill="currentColor"></path>
+                        </svg></div>
+                    </a>
+                    <a href="https://www.facebook.com/thatsfinsweet" class="footer5_link">Visit us on Facebook</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-large">
+          <div class="padding-section-large">
             <div class="line-divider"></div>
             <div class="padding-bottom padding-medium"></div>
             <div class="footer1_top">
               <div class="footer1_content-left">
                 <div id="w-node-feaa94f5-a96d-9665-4cd3-bf17b483a4c3-67c79560" class="div-block-2">
                   <div id="w-node-_664c0f4a-47d6-b554-9de9-a7b2adea4727-67c79560" class="image_wrapper_footer"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="250px" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt=""></div>
+                  <div class="text-size-small">Ukanytes Projects, VšĮ<br>Įmonės kodas: 306675363<br>Manufaktūrų g. 16, LT-11342 Vilnius<br></div>
                   <div class="footer1_bottom">
                     <div class="text-size-small">© Kunu Studio</div>
                     <div class="footer1_social">
@@ -505,6 +548,7 @@ margin: 0rem !important;
                 </div>
               </div>
             </div>
+            <div class="footer_padding"></div>
           </div>
         </div>
       </div>
