--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Oct 31 2024 15:10:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66eec62f2fa59c2dc1325449" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -38,11 +38,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <path fill-rule="evenodd" clip-rule="evenodd" d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM9.03649 7.97577C8.7436 7.68288 8.26873 7.68288 7.97583 7.97577C7.68294 8.26867 7.68294 8.74354 7.97583 9.03643L10.9393 11.9999L7.97583 14.9633C7.68294 15.2562 7.68294 15.731 7.97583 16.0239C8.26873 16.3168 8.7436 16.3168 9.03649 16.0239L11.9999 13.0605L14.9633 16.0239C15.2562 16.3168 15.7311 16.3168 16.024 16.0239C16.3169 15.731 16.3169 15.2562 16.024 14.9633L13.0606 11.9999L16.024 9.03643C16.3169 8.74354 16.3169 8.26867 16.024 7.97577C15.7311 7.68288 15.2562 7.68288 14.9633 7.97577L11.9999 10.9392L9.03649 7.97577Z" fill="currentcolor"></path>
         </svg></div>
       <div class="margin-vertical margin-small">
-        <h2 class="heading-style-h3">Page Not Found</h2>
+        <h2 class="heading-style-h3">Puslapis Nerastas</h2>
       </div>
-      <div>The page you are looking for doesn&#x27;t exist or has been moved</div>
       <div class="padding-bottom padding-medium"></div>
-      <a href="index.html" class="button w-button">Back home</a>
+      <a href="index.html" class="button w-button">Grižti į pagrindinę svetainę</a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66eec62f2fa59c2dc13253bb" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
